--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="gray">#707070</color>
     <color name="lightBackground">#F4F4F4</color>
     <color name="thirdColor">#FF000000</color>
+    <color name="forthColor">#707070</color>
 </resources>
