--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -116,6 +116,7 @@
                 android:layout_height="0dp"
                 android:layout_marginBottom="0dp"
                 android:layout_weight="1"
+                android:onClick="onClickButtonTakePhoto"
                 app:cardCornerRadius="25dp"
                 app:cardElevation="4dp">
 
@@ -149,6 +150,7 @@
                 android:layout_marginBottom="0dp"
                 android:layout_weight="1"
                 android:background="@color/black"
+                android:onClick="onClickButtonGallery"
                 app:cardCornerRadius="25dp"
                 app:cardElevation="4dp">
 
