--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -110,9 +110,12 @@
                     android:id="@+id/Password"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="8dp"
                     android:layout_weight="7"
-                    android:hint="input password please" />
+                    android:layout_marginLeft="8dp"
+                    android:hint="input password please"
+                    android:ems="10"
+                    android:inputType="textPassword" />
+
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
