--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/camerabg"
+    android:id="@+id/takePhotoView"
     tools:context=".CameraActivity">
 
     <LinearLayout
@@ -58,6 +59,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1.6"
+                android:onClick="onClickChangeView"
                 app:srcCompat="@drawable/rotate" />
 
             <View
