--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -45,6 +45,7 @@
                     android:id="@+id/imageView5"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:onClick="onClickButtonWelcomePage"
                     app:srcCompat="@drawable/backbutton_gallery" />
 
             </androidx.cardview.widget.CardView>
