--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -303,8 +303,9 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
-                app:srcCompat="@drawable/resource_continue"
-                tools:visibility="invisible" />
+                android:visibility="invisible"
+                android:onClick="onClickButtonScan"
+                app:srcCompat="@drawable/resource_continue" />
         </LinearLayout>
 
         <View
