--- a/app/src/main/res/layout/activity_selection.xml
+++ b/app/src/main/res/layout/activity_selection.xml
@@ -84,6 +84,7 @@ want to make" />
         android:layout_marginStart="28dp"
         android:layout_marginEnd="28dp"
         android:alpha="1"
+        android:tag="chosen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -97,6 +98,7 @@ want to make" />
         android:layout_marginTop="500dp"
         android:layout_marginEnd="270dp"
         android:alpha="1"
+        android:tag="chosen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -110,6 +112,7 @@ want to make" />
         android:layout_marginStart="180dp"
         android:layout_marginBottom="280dp"
         android:alpha="1"
+        android:tag="chosen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
