--- a/app/src/main/res/layout/activity_deal.xml
+++ b/app/src/main/res/layout/activity_deal.xml
@@ -81,7 +81,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
-                    app:srcCompat="@drawable/okay_b" />
+                    android:onClick="onClickButtonGetFile"
+                    app:srcCompat="@drawable/continue_purple" />
 
                 <View
                     android:layout_width="0dp"
