--- a/app/src/main/res/layout/activity_get_filename.xml
+++ b/app/src/main/res/layout/activity_get_filename.xml
@@ -131,7 +131,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:visibility="invisible"
-            android:onClick="onClickButtonDeal"
+            android:onClick="onClickButtonPreview"
             app:srcCompat="@drawable/okay" />
 
         <View
