--- a/app/src/main/res/layout/activity_preview.xml
+++ b/app/src/main/res/layout/activity_preview.xml
@@ -105,7 +105,7 @@
                 app:srcCompat="@drawable/file" />
 
             <TextView
-                android:id="@+id/textView11"
+                android:id="@+id/fileName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="270dp"
@@ -129,8 +129,8 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_marginBottom="0dp"
-                android:layout_weight="8"
+                android:layout_marginBottom="8dp"
+                android:layout_weight="9"
                 app:cardCornerRadius="25dp"
                 app:cardElevation="4dp">
 
@@ -156,13 +156,13 @@
                 android:id="@+id/view"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
-                android:layout_weight="5" />
+                android:layout_weight="3" />
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_marginBottom="0dp"
-                android:layout_weight="8"
+                android:layout_marginBottom="8dp"
+                android:layout_weight="9"
                 android:background="@color/black"
                 app:cardCornerRadius="25dp"
                 app:cardElevation="4dp">
