--- a/app/src/main/res/layout/activity_succeed.xml
+++ b/app/src/main/res/layout/activity_succeed.xml
@@ -151,6 +151,7 @@
             android:layout_marginBottom="0dp"
             android:layout_weight="1"
             android:background="@color/black"
+            android:onClick="onClickButtonGallery"
             app:cardCornerRadius="25dp"
             app:cardElevation="4dp">
 
