--- a/app/src/main/res/layout/activity_person.xml
+++ b/app/src/main/res/layout/activity_person.xml
@@ -25,28 +25,38 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="120dp"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <LinearLayout
-                android:id="@+id/f1_1"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/f1_1_Img"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="4"
-                    app:srcCompat="@drawable/bird1" />
-
-                <TextView
-                    android:id="@+id/f1_1_Name"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                <LinearLayout
+                    android:id="@+id/f1_1"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="name" />
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/f1_1_Img"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="4"
+                        app:srcCompat="@drawable/bird1" />
+
+                    <TextView
+                        android:id="@+id/f1_1_Name"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:text="name" />
+
+            </LinearLayout>
+
+
 
 
             </LinearLayout>
@@ -59,20 +69,21 @@
                 android:orientation="vertical">
 
                 <ImageView
-                        android:id="@+id/f1_2_Img"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="4"
-                        app:srcCompat="@drawable/hasky" />
+                    android:id="@+id/f1_2_Img"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="4"
+                    app:srcCompat="@drawable/hasky" />
 
                 <TextView
-                        android:id="@+id/f1_2_Name"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:text="Hasky" />
+                    android:id="@+id/f1_2_Name"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:text="Hasky" />
 
             </LinearLayout>
+
             <LinearLayout
                 android:id="@+id/f1_3"
                 android:layout_width="0dp"
@@ -85,7 +96,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="4"
-                    app:srcCompat="@drawable/high_five" />
+                    android:src="@drawable/high_five" />
 
                 <TextView
                     android:id="@+id/f1_3_Name"
@@ -181,5 +192,10 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"></LinearLayout>
 
 </LinearLayout>
